@@ -15,6 +15,9 @@ See the end for copying conditions.
 ** libgnutls: Corrected issue with TLS 1.2 session ticket handling as client
    during resumption (#841).
 
+** certtool: CRL distribution points will be set in CA certificates even when
+   non self-signed (#765).
+
 ** gnutls-cli/serv: added raw public-key handling capabilities (RFC7250).
    Key material can be set via the --rawpkkeyfile and --rawpkfile flags.
 
